; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_tabinit.c_prepare_decode_tables.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_tabinit.c_prepare_decode_tables.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pnts = common dso_local global i32** null, align 8
@M_PI = common dso_local global double 0.000000e+00, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @prepare_decode_tables() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 0, i32* %1, align 4
  br label %6

6:                                                ; preds = %45, %0
  %7 = load i32, i32* %1, align 4
  %8 = icmp slt i32 %7, 5
  br i1 %8, label %9, label %48

9:                                                ; preds = %6
  %10 = load i32, i32* %1, align 4
  %11 = ashr i32 16, %10
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %1, align 4
  %13 = ashr i32 64, %12
  store i32 %13, i32* %4, align 4
  %14 = load i32**, i32*** @pnts, align 8
  %15 = load i32, i32* %1, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32*, i32** %14, i64 %16
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %5, align 8
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %41, %9
  %20 = load i32, i32* %2, align 4
  %21 = load i32, i32* %3, align 4
  %22 = icmp slt i32 %20, %21
  br i1 %22, label %23, label %44

23:                                               ; preds = %19
  %24 = load double, double* @M_PI, align 8
  %25 = load i32, i32* %2, align 4
  %26 = sitofp i32 %25 to double
  %27 = fmul double %26, 2.000000e+00
  %28 = fadd double %27, 1.000000e+00
  %29 = fmul double %24, %28
  %30 = load i32, i32* %4, align 4
  %31 = sitofp i32 %30 to double
  %32 = fdiv double %29, %31
  %33 = call double @cos(double %32) #3
  %34 = fmul double 2.000000e+00, %33
  %35 = fdiv double 1.000000e+00, %34
  %36 = call i32 @DOUBLE_TO_REAL(double %35)
  %37 = load i32*, i32** %5, align 8
  %38 = load i32, i32* %2, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i32, i32* %37, i64 %39
  store i32 %36, i32* %40, align 4
  br label %41

41:                                               ; preds = %23
  %42 = load i32, i32* %2, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %2, align 4
  br label %19

44:                                               ; preds = %19
  br label %45

45:                                               ; preds = %44
  %46 = load i32, i32* %1, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %1, align 4
  br label %6

48:                                               ; preds = %6
  ret void
}

declare dso_local i32 @DOUBLE_TO_REAL(double) #1

; Function Attrs: nounwind
declare dso_local double @cos(double) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
